--- a/app/templates/account/snippets/form_input.html
+++ b/app/templates/account/snippets/form_input.html
@@ -5,6 +5,7 @@
         id="{{ input_name }}"
         class="block py-2.5 px-0 w-full text-sm bg-transparent border-0 border-b-2 border-gray-300 appearance-none dark:border-gray-600 focus:outline-none focus:ring-0 focus:border-primary peer"
         placeholder=" "
+        value="{{ value }}"
         required
     />
     <label for="{{ input_name }}"
