--- a/app/templates/header.html
+++ b/app/templates/header.html
@@ -1,4 +1,4 @@
-<nav class="navbar bg-base-200">
+<nav class="navbar">
 
     <div class="navbar-start">
         <div class="dropdown">
@@ -22,7 +22,7 @@
                     </a>
                 </li>
                 <li>
-                    <a>
+                    <a href="{% url 'stocks' %}">
                         <svg xmlns="http://www.w3.org/2000/svg" fill="none" viewBox="0 0 24 24" stroke-width="1.5"
                             stroke="currentColor" class="h-4 w-4">
                             <path stroke-linecap="round" stroke-linejoin="round"
@@ -44,7 +44,7 @@
         <div class="dropdown dropdown-end">
 
             <div tabindex="0" role="button" class="btn btn-ghost btn-circle avatar">
-                <div class="w-8 rounded-full flex items-center justify-center bg-base-200">
+                <div class="w-8 rounded-full flex items-center justify-center">
                     <!-- Использование SVG-иконки профиля -->
                     <svg xmlns="http://www.w3.org/2000/svg" fill="none" viewBox="0 0 24 24" stroke-width="1.5"
                         stroke="currentColor">
