--- a/app/templates/landing/index.html
+++ b/app/templates/landing/index.html
@@ -6,7 +6,7 @@
 
 {% include 'account/snippets/messages.html' %}
 
-<section class="hero min-h-screen bg-base-200">
+<section class="hero min-h-screen">
     <div class="hero-content text-center">
         <div class="max-w-md">
             <h1 class="text-5xl font-bold">Добро пожаловать в StockSavvy!</h1>
