feat: implement the ability to add stocks to favorites

--- a/app/templates/base.html
+++ b/app/templates/base.html
@@ -32,6 +32,10 @@
 
     <script src="{% static 'js/footer.js' %}"></script>
 
+    <script src="{% static 'js/getCookie.js' %}"></script>
+    <script src="{% static 'js/showToast.js' %}"></script>
+    <script src="{% static 'js/stocks/add-or-remove-favourite.js' %}"></script>
+
     {% block scripts %}{% endblock %}
 
 </body>
