--- a/app/templates/stocks/components/stock_item.html
+++ b/app/templates/stocks/components/stock_item.html
@@ -5,25 +5,32 @@
 
     {% if request.user.is_authenticated %}
         <!-- "Добавить в избранное" -->
-        <div class="absolute left-[-55px] top-1/2 transform -translate-y-1/2 p-5 transition duration-200 cursor-pointer hidden lg:block">
+        <div class="absolute left-[-55px] top-1/2 transform -translate-y-1/2 transition duration-200 cursor-pointer hidden lg:block">
             <!-- Если акция в избранном, отображаем иконку всегда -->
             {% if stock.ticker in favourite_stocks %}
-                <div title="Удалить из избранного">
+                <div class="add-or-remove-favourite p-5"
+                     data-user-id="{{ request.user.id }}"
+                     data-stock-ticker="{{ stock.ticker }}"
+                     data-favourite-status="true"
+                     title="Удалить из избранного">
                     <svg xmlns="http://www.w3.org/2000/svg" fill="currentColor" class="w-5 h-5" viewBox="0 0 16 16">
-                      <path d="M3.612 15.443c-.386.198-.824-.149-.746-.592l.83-4.73L.173 6.765c-.329-.314-.158-.888.283-.95l4.898-.696L7.538.792c.197-.39.73-.39.927 0l2.184 4.327 4.898.696c.441.062.612.636.282.95l-3.522 3.356.83 4.73c.078.443-.36.79-.746.592L8 13.187l-4.389 2.256z"/>
+                        <path d="M3.612 15.443c-.386.198-.824-.149-.746-.592l.83-4.73L.173 6.765c-.329-.314-.158-.888.283-.95l4.898-.696L7.538.792c.197-.39.73-.39.927 0l2.184 4.327 4.898.696c.441.062.612.636.282.95l-3.522 3.356.83 4.73c.078.443-.36.79-.746.592L8 13.187l-4.389 2.256z"/>
                     </svg>
                 </div>
             {% else %}
                 <!-- Если акция не в избранном, показываем иконку только при наведении -->
-                <div class="hidden group-hover:flex items-center justify-center" title="Добавить в избранное">
+                <div class="hidden group-hover:flex add-or-remove-favourite p-5"
+                     data-user-id="{{ request.user.id }}"
+                     data-stock-ticker="{{ stock.ticker }}"
+                     data-favourite-status="false"
+                     title="Добавить в избранное">
                     <svg xmlns="http://www.w3.org/2000/svg" fill="currentColor" class="w-5 h-5" viewBox="0 0 16 16">
-                      <path d="M2.866 14.85c-.078.444.36.791.746.593l4.39-2.256 4.389 2.256c.386.198.824-.149.746-.592l-.83-4.73 3.522-3.356c.33-.314.16-.888-.282-.95l-4.898-.696L8.465.792a.513.513 0 0 0-.927 0L5.354 5.12l-4.898.696c-.441.062-.612.636-.283.95l3.523 3.356-.83 4.73zm4.905-2.767-3.686 1.894.694-3.957a.56.56 0 0 0-.163-.505L1.71 6.745l4.052-.576a.53.53 0 0 0 .393-.288L8 2.223l1.847 3.658a.53.53 0 0 0 .393.288l4.052.575-2.906 2.77a.56.56 0 0 0-.163.506l.694 3.957-3.686-1.894a.5.5 0 0 0-.461 0z"/>
+                        <path d="M2.866 14.85c-.078.444.36.791.746.593l4.39-2.256 4.389 2.256c.386.198.824-.149.746-.592l-.83-4.73 3.522-3.356c.33-.314.16-.888-.282-.95l-4.898-.696L8.465.792a.513.513 0 0 0-.927 0L5.354 5.12l-4.898.696c-.441.062-.612.636-.283.95l3.523 3.356-.83 4.73zm4.905-2.767-3.686 1.894.694-3.957a.56.56 0 0 0-.163-.505L1.71 6.745l4.052-.576a.53.53 0 0 0 .393-.288L8 2.223l1.847 3.658a.53.53 0 0 0 .393.288l4.052.575-2.906 2.77a.56.56 0 0 0-.163.506l.694 3.957-3.686-1.894a.5.5 0 0 0-.461 0z"/>
                     </svg>
                 </div>
             {% endif %}
         </div>
     {% endif %}
-
 
     <div class="list-group-item bg-base-100 border p-4 hover:bg-base-200 transition duration-200 cursor-pointer"
          style="margin-bottom: -1px;"
@@ -46,7 +53,7 @@
 
             <!-- Изменение за день -->
             {% with value_per_day=stock.price_change.value_per_day percent_per_day=stock.price_change.percent_per_day %}
-            <div class="hidden md:block text-right text-sm md:text-base {% if value_per_day > 0 %}text-success{% elif value_per_day < 0 %}text-danger{% endif %}">
+            <div class="hidden md:block text-right text-sm md:text-base {% if value_per_day > 0 %}text-success{% elif value_per_day < 0 %}text-error{% endif %}">
                 {% if not value_per_day and not percent_per_day %}
                 -
                 {% else %}
