--- a/app/templates/stocks/favourite_stock_list.html
+++ b/app/templates/stocks/favourite_stock_list.html
@@ -8,7 +8,17 @@
 
 {% endblock stock_item %}
 
+{% block stock_header_content %}
+
+    <h1 class="text-2xl md:text-4xl font-bold mb-5">Избранные акции</h1>
+    <p class="text-sm md:text-base">Добавляйте акции в избранное, чтобы быстро отслеживать их изменения и всегда иметь доступ к вашим любимым акциям</p>
+
+{% endblock stock_header_content %}
+
+
 {% block no_stocks_text %}
+
+    <div class="divider"></div>
 
     <div class="text-center">
         <p class="fs-5 mb-2">У вас нет акций в избранном</p>
