feat: add stock detail page

--- a/app/templates/stocks/components/info_item.html
+++ b/app/templates/stocks/components/info_item.html
@@ -1,17 +1,14 @@
 {% load formatting_filters %}
 
-<div class="row justify-content-between pt-3">
-    <div class="col-auto">
-        <div class="text-start text-muted">
+<div>
+    <div class="flex items-center justify-between pt-3">
+        <div class="text-start text-muted text-sm md:text-base">
             {{ name }}
         </div>
-    </div>
-    <div class="col-auto">
-        <div class="text-end">
+        <div class="text-end text-sm md:text-base">
             {{ value|default_if_none:"-" }}
         </div>
     </div>
-    <div>
-        <hr class="mt-3 mb-0 text-muted">
-    </div>
+
+    <div class="divider mt-1 md:mt-3 mb-0"></div>
 </div>
