--- a/app/templates/stocks/stock_detail.html
+++ b/app/templates/stocks/stock_detail.html
@@ -18,12 +18,44 @@
     <div class="grid grid-cols-1 lg:grid-cols-3 gap-6">
         <!-- Детали акции -->
         <div class="lg:col-span-2">
+
             <div class="flex justify-between items-center">
-                <h3 class="text-lg md:text-2xl  font-bold">{{ stock.shortname }}
+                <h3 class="text-lg md:text-2xl font-bold">{{ stock.shortname }}
                     <sup><span class="text-primary text-sm">{{ stock.ticker }}</span></sup>
                 </h3>
 
+                {% if request.user.is_authenticated %}
+                    <!-- "Добавить в избранное" -->
+                    <div class="relative">
+                        <!-- Если акция в избранном, отображаем иконку всегда -->
+                        {% if stock.ticker in favourite_stocks %}
+                            <div class="add-or-remove-favourite cursor-pointer p-3 pb-0"
+                                 data-user-id="{{ request.user.id }}"
+                                 data-stock-ticker="{{ stock.ticker }}"
+                                 data-favourite-status="true"
+                                 data-remove-star="false"
+                                 title="Удалить из избранного">
+                                <svg xmlns="http://www.w3.org/2000/svg" fill="currentColor" class="w-5 h-5" viewBox="0 0 16 16">
+                                    <path d="M3.612 15.443c-.386.198-.824-.149-.746-.592l.83-4.73L.173 6.765c-.329-.314-.158-.888.283-.95l4.898-.696L7.538.792c.197-.39.73-.39.927 0l2.184 4.327 4.898.696c.441.062.612.636.282.95l-3.522 3.356.83 4.73c.078.443-.36.79-.746.592L8 13.187l-4.389 2.256z"/>
+                                </svg>
+                            </div>
+                        {% else %}
+                            <!-- Если акция не в избранном, показываем иконку только при наведении -->
+                            <div class="add-or-remove-favourite cursor-pointer p-3 pb-0"
+                                 data-user-id="{{ request.user.id }}"
+                                 data-stock-ticker="{{ stock.ticker }}"
+                                 data-favourite-status="false"
+                                 data-remove-star="false"
+                                 title="Добавить в избранное">
+                                <svg xmlns="http://www.w3.org/2000/svg" fill="currentColor" class="w-5 h-5" viewBox="0 0 16 16">
+                                    <path d="M2.866 14.85c-.078.444.36.791.746.593l4.39-2.256 4.389 2.256c.386.198.824-.149.746-.592l-.83-4.73 3.522-3.356c.33-.314.16-.888-.282-.95l-4.898-.696L8.465.792a.513.513 0 0 0-.927 0L5.354 5.12l-4.898.696c-.441.062-.612.636-.283.95l3.523 3.356-.83 4.73zm4.905-2.767-3.686 1.894.694-3.957a.56.56 0 0 0-.163-.505L1.71 6.745l4.052-.576a.53.53 0 0 0 .393-.288L8 2.223l1.847 3.658a.53.53 0 0 0 .393.288l4.052.575-2.906 2.77a.56.56 0 0 0-.163.506l.694 3.957-3.686-1.894a.5.5 0 0 0-.461 0z"/>
+                                </svg>
+                            </div>
+                        {% endif %}
+                    </div>
+                {% endif %}
             </div>
+
 
             <div class="divider mt-2 mb-4"></div>
 
@@ -104,16 +136,6 @@
 <script>
     const stockTicker = "{{ stock.ticker }}";
     const decimals = "{{ stock.decimals }}";
-
-    document.querySelectorAll('.tab').forEach(tab => {
-        tab.addEventListener('click', () => {
-            document.querySelectorAll('.tab').forEach(el => el.classList.remove('tab-active'));
-            tab.classList.add('tab-active');
-
-            document.querySelectorAll('.tab-content').forEach(content => content.classList.add('hidden'));
-            document.querySelector(tab.dataset.target).classList.remove('hidden');
-        });
-    });
 </script>
 <script src="{% static "stocks/js/stock-chart.js" %}"></script>
 {% endblock scripts %}
