--- a/app/templates/stocks/stock_list.html
+++ b/app/templates/stocks/stock_list.html
@@ -11,7 +11,7 @@
 
         <div class="text-center mt-5 mb-7">
             {% block stock_header_content %}
-                <h1 class="text-2xl md:text-4xl font-bold mb-5">Акции Московской биржи <span class="text-primary">(MOEX)</span></h1>
+            <h1 class="text-2xl md:text-4xl font-bold mb-5">Акции Московской биржи <span class="text-primary">(<a href="{% url 'stock-detail' ticker='MOEX' %}" class="link link-primary">MOEX</a>)</span></h1>
                 <p class="text-sm md:text-base">На платформе представлено более <strong>{{ total_stocks_rounded }} акций</strong>, с актуальной стоимостью и динамикой изменения цен</p>
             {% endblock stock_header_content %}
         </div>
