--- a/app/templates/stocks/stock_detail.html
+++ b/app/templates/stocks/stock_detail.html
@@ -3,9 +3,19 @@
 {% load static %}
 {% load formatting_filters %}
 
-{% block title %}{{ stock.shortname }} ({{ stock.ticker }}) | StockSavvy{% endblock title %}
+{% block title %}{{ stock.shortname }} - {{ stock.ticker }} | StockSavvy{% endblock title %}
 
 {% block head %}
+<!-- AnyChart -->
+<script src="{% static 'js/anychart-core.min.js' %}"></script>
+<script src="{% static 'js/anychart-stock.min.js' %}"></script>
+<script src="{% static 'js/anychart-ui.min.js' %}"></script>
+<link href="{% static 'css/anychart-ui.min.css' %}" type="text/css" rel="stylesheet">
+<script src="{% static 'js/anychart-locale-ru-ru.js' %}"></script>
+
+<!-- Axios -->
+<script src="{% static 'js/axios.min.js' %}"></script>
+
 <style>
     .anychart-plot-controls, .anychart-credits {
         display: none;
@@ -19,50 +29,56 @@
         <!-- Детали акции -->
         <div class="lg:col-span-2">
 
-            <div class="flex justify-between items-center">
-                <h3 class="text-lg md:text-2xl font-bold">{{ stock.shortname }}
-                    <sup><span class="text-primary text-sm">{{ stock.ticker }}</span></sup>
-                </h3>
+            <div class="card shadow-md w-full mb-6">
+                <div class="card-body p-3 md:p-5">
+                    <!-- Контейнер для заголовка и иконки -->
+                    <div class="flex justify-between items-center">
+                        <!-- Заголовок -->
+                        <h3 class="text-lg md:text-2xl font-bold">
+                            {{ stock.shortname }}
+                            <sup><span class="text-primary text-sm">{{ stock.ticker }}</span></sup>
+                        </h3>
 
-                {% if request.user.is_authenticated %}
-                    <!-- "Добавить в избранное" -->
-                    <div class="relative">
-                        <!-- Если акция в избранном, отображаем иконку всегда -->
-                        {% if stock.ticker in favourite_stocks %}
-                            <div class="add-or-remove-favourite cursor-pointer p-3 pb-0"
-                                 data-user-id="{{ request.user.id }}"
-                                 data-stock-ticker="{{ stock.ticker }}"
-                                 data-favourite-status="true"
-                                 data-remove-star="false"
-                                 title="Удалить из избранного">
-                                <svg xmlns="http://www.w3.org/2000/svg" fill="currentColor" class="w-5 h-5" viewBox="0 0 16 16">
-                                    <path d="M3.612 15.443c-.386.198-.824-.149-.746-.592l.83-4.73L.173 6.765c-.329-.314-.158-.888.283-.95l4.898-.696L7.538.792c.197-.39.73-.39.927 0l2.184 4.327 4.898.696c.441.062.612.636.282.95l-3.522 3.356.83 4.73c.078.443-.36.79-.746.592L8 13.187l-4.389 2.256z"/>
-                                </svg>
-                            </div>
-                        {% else %}
-                            <!-- Если акция не в избранном, показываем иконку только при наведении -->
-                            <div class="add-or-remove-favourite cursor-pointer p-3 pb-0"
-                                 data-user-id="{{ request.user.id }}"
-                                 data-stock-ticker="{{ stock.ticker }}"
-                                 data-favourite-status="false"
-                                 data-remove-star="false"
-                                 title="Добавить в избранное">
-                                <svg xmlns="http://www.w3.org/2000/svg" fill="currentColor" class="w-5 h-5" viewBox="0 0 16 16">
-                                    <path d="M2.866 14.85c-.078.444.36.791.746.593l4.39-2.256 4.389 2.256c.386.198.824-.149.746-.592l-.83-4.73 3.522-3.356c.33-.314.16-.888-.282-.95l-4.898-.696L8.465.792a.513.513 0 0 0-.927 0L5.354 5.12l-4.898.696c-.441.062-.612.636-.283.95l3.523 3.356-.83 4.73zm4.905-2.767-3.686 1.894.694-3.957a.56.56 0 0 0-.163-.505L1.71 6.745l4.052-.576a.53.53 0 0 0 .393-.288L8 2.223l1.847 3.658a.53.53 0 0 0 .393.288l4.052.575-2.906 2.77a.56.56 0 0 0-.163.506l.694 3.957-3.686-1.894a.5.5 0 0 0-.461 0z"/>
-                                </svg>
+                        {% if request.user.is_authenticated %}
+                            <!-- "Добавить в избранное" -->
+                            <div class="relative">
+                                {% if stock.ticker in favourite_stocks %}
+                                    <!-- Иконка для "Удалить из избранного" -->
+                                    <div class="add-or-remove-favourite cursor-pointer p-3"
+                                         data-user-id="{{ request.user.id }}"
+                                         data-stock-ticker="{{ stock.ticker }}"
+                                         data-favourite-status="true"
+                                         data-remove-star="false"
+                                         title="Удалить из избранного">
+                                        <svg xmlns="http://www.w3.org/2000/svg" fill="currentColor" class="w-5 h-5" viewBox="0 0 16 16">
+                                            <path d="M3.612 15.443c-.386.198-.824-.149-.746-.592l.83-4.73L.173 6.765c-.329-.314-.158-.888.283-.95l4.898-.696L7.538.792c.197-.39.73-.39.927 0l2.184 4.327 4.898.696c.441.062.612.636.282.95l-3.522 3.356.83 4.73c.078.443-.36.79-.746.592L8 13.187l-4.389 2.256z"/>
+                                        </svg>
+                                    </div>
+                                {% else %}
+                                    <!-- Иконка для "Добавить в избранное" -->
+                                    <div class="add-or-remove-favourite cursor-pointer p-3"
+                                         data-user-id="{{ request.user.id }}"
+                                         data-stock-ticker="{{ stock.ticker }}"
+                                         data-favourite-status="false"
+                                         data-remove-star="false"
+                                         title="Добавить в избранное">
+                                        <svg xmlns="http://www.w3.org/2000/svg" fill="currentColor" class="w-5 h-5" viewBox="0 0 16 16">
+                                            <path d="M2.866 14.85c-.078.444.36.791.746.593l4.39-2.256 4.389 2.256c.386.198.824-.149.746-.592l-.83-4.73 3.522-3.356c.33-.314.16-.888-.282-.95l-4.898-.696L8.465.792a.513.513 0 0 0-.927 0L5.354 5.12l-4.898.696c-.441.062-.612.636-.283.95l3.523 3.356-.83 4.73zm4.905-2.767-3.686 1.894.694-3.957a.56.56 0 0 0-.163-.505L1.71 6.745l4.052-.576a.53.53 0 0 0 .393-.288L8 2.223l1.847 3.658a.53.53 0 0 0 .393.288l4.052.575-2.906 2.77a.56.56 0 0 0-.163.506l.694 3.957-3.686-1.894a.5.5 0 0 0-.461 0z"/>
+                                        </svg>
+                                    </div>
+                                {% endif %}
                             </div>
                         {% endif %}
                     </div>
-                {% endif %}
+                </div>
             </div>
 
-
-            <div class="divider mt-2 mb-4"></div>
+<!--            <div class="divider mt-2 mb-4"></div>-->
 
             <!-- Выбор типа акции -->
-            <div class="relative h-96 skeleton bg-base-200 rounded-lg shadow">
-                <div id="chart-controls" class="flex items-center space-x-4 hidden">
-                    <select id="chart-type" class="select select-sm">
+            <div class="relative h-96">
+                <div id="chart-controls" class="flex items-center space-x-4 hidden mb-2">
+                    <select id="chart-type" class="select select-bordered select-xs md:select-sm">
                         <option value="candlestick" selected>Candlestick</option>
                         <option value="ohlc">OHLC</option>
                         <option value="line">Line</option>
@@ -74,22 +90,23 @@
                         <option value="hilo">Hilo</option>
                     </select>
                     <label class="flex items-center space-x-2">
-                        <input type="checkbox" class="toggle toggle-sm" id="emaSwitch">
-                        <span class="text-sm">EMA</span>
+                        <input type="checkbox" class="toggle toggle-xs md:toggle-sm" id="emaSwitch">
+                        <span class="text-xs md:text-sm">EMA</span>
                     </label>
                 </div>
-                <div id="stock-chart" class="h-full relative">
-                    <div class="absolute inset-0 flex justify-center items-center z-10">
-                        <div id="no-data" class="hidden text-gray-500">There is no data available.</div>
-                        <div id="chart-spinner" class="spinner-border w-6 h-6 animate-spin text-gray-500"></div>
+                <div id="stock-chart" class="relative h-full">
+                    <!-- Центрирование через абсолютное позиционирование -->
+                    <div id="no-data" class="hidden absolute top-1/2 left-1/2 transform -translate-x-1/2 -translate-y-1/2 text-gray-500">
+                        Нет данных
                     </div>
+                    <span id="chart-spinner" class="loading loading-bars loading-md md:loading-lg absolute top-1/2 left-1/2 transform -translate-x-1/2 -translate-y-1/2"></span>
                 </div>
             </div>
         </div>
 
         <!-- Цена акции -->
         <div>
-            <div class="card shadow-lg">
+            <div class="card shadow-md mt-5 lg:mt-0">
                 <div class="card-body text-center p-3 md:p-5">
                     <p class="text-xs md:text-sm text-gray-500">Цена акции на <b>{{ price_update_date|default_if_none:"-" }}</b></p>
                     <h3 class="text-lg md:text-2xl font-semibold">{{ last_stock_price|default_if_none:"-" }} {{ stock.currencyid|convert_currency_code }}</h3>
@@ -99,7 +116,7 @@
     </div>
 
     <!-- Индикаторы акций -->
-    <div role="tablist" class="tabs tabs-lifted mt-8">
+    <div role="tablist" class="tabs tabs-lifted mt-4 md:mt-8 lg:mt-16">
         <input type="radio" name="stock_tabs" role="tab" class="tab text-xs md:text-base" aria-label="Торговые данные" id="trading-data-tab" checked="checked" />
         <div role="tabpanel" class="tab-content bg-base-100 border-base-300 rounded-box p-6">
             <div class="grid grid-cols-1 md:grid-cols-2 gap-3">
@@ -137,5 +154,5 @@
     const stockTicker = "{{ stock.ticker }}";
     const decimals = "{{ stock.decimals }}";
 </script>
-<script src="{% static "stocks/js/stock-chart.js" %}"></script>
+<script src="{% static 'js/stocks/stock-chart.js' %}"></script>
 {% endblock scripts %}
